# astro-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  project.json
.claude/agents/: core-math-validator.md  shared-api-reviewer.md
.claude/skills/: safe-arithmetic.md
.github/workflows/: ci.yml
contracts/fee-distributor/: Cargo.toml
contracts/fee-distributor/src/: lib.rs
contracts/fee-distributor/test_snapshots/tests/: test_below_minimum.1.json  test_initialize.1.json  test_pause_emergency_withdraw.1.json  test_receive_and_distribute.1.json  test_update_config.1.json
contracts/locker/: Cargo.toml
contracts/locker/src/: lib.rs
contracts/locker/test_snapshots/tests/: test_early_unlock_with_penalty.1.json  test_extend_lock.1.json  test_initialize.1.json  test_lock_and_unlock.1.json  test_permanent_lock.1.json  test_transfer_lock.1.json
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs  reentrancy.rs  ttl.rs
contracts/shared/src/events/: mod.rs
contracts/shared/src/interfaces/: mod.rs
contracts/shared/src/math/: mod.rs
contracts/shared/src/types/: config.rs  errors.rs  mod.rs  storage.rs  token.rs
contracts/shared/src/zk/: mod.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/staking/test_snapshots/tests/: test_add_rewards_and_claim.1.json  test_initialize.1.json  test_multiple_stakers.1.json  test_stake_and_unstake.1.json
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/treasury/test_snapshots/test/: test_change_admin.1.json  test_deposit_and_withdraw.1.json  test_double_initialize.1.json  test_double_initialize_fails.1.json  test_initialize.1.json  test_multiple_tokens.1.json  test_pause.1.json  test_spender_system.1.json
