[workspace]
resolver = "2"

members = [
    "contracts/shared",
    "contracts/treasury",
    "contracts/fee-distributor",
    "contracts/staking",
    "contracts/locker",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Astro Team <team@astro.finance>"]
license = "MIT"
repository = "https://github.com/AstroFinance/astro-core"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
