[package]
name = "astro-fee-distributor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Fee distribution contract for Astro Protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
astro-core-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
