[package]
name = "astro-locker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LP token locker for Astro Protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
astro-core-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
