[package]
name = "astro-staking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Staking pool contract for Astro Protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
astro-core-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
